sourceforge (2.6-0+6+) unstable; urgency=low

  * [Roland] [From 2.5] Added templates to conffiles.
  * [Roland] Added debconf magic to ask whether to replace a config file
    before doing it (in the post-installation and pre-remove phases).
  * [Christian] Changed to use cvsweb 
  * [Roland] Added "-s /bin/sh" when su'ing to postgres.

 --

sourceforge (2.6-0+6) unstable; urgency=low

  * [Roland] [From 2.5] Added docs.
  * [Roland] Added libmime-base64-perl and libhtml-parser-perl to
    dependencies (db-upgrade26.pl now uses MIME::Base64 and
    HTML::Entities).
  * [Roland] Added migration capability to the db-upgrade26.pl script.
    Database upgrades smoothly from 2.5 to 2.6.  Hopefully.  Not very well
    tested yet.
  * [Christian] Removed libmcrypt bug workaround

 -- Christian Bayle <bayle@aist.enst.fr>  Thu,  7 Feb 2002 18:30:27 +0100

sourceforge (2.6-0+5) unstable; urgency=low

  * [Christian] Added dependency to php4-mcrypt
  * [Christian] Temporary workaround for libmcrypt bug in local.inc.template
  * [Christian] Removed mcrypt-test.sh 

 -- Christian Bayle <bayle@aist.enst.fr>  Sun, 27 Jan 2002 18:43:43 +0100

sourceforge (2.6-0+4) unstable; urgency=low

  * [Christian] Removed unjustified warning in intall-ldap.sh.
  * [Roland] Updated Standards-Version to 3.5.6.0.
  * [Roland] Made the package arch-independent.
  * [Roland] Updated debian/TODO a bit.
  * [Roland] Fixed a few minor bugs in my/index.php.
  * [Roland] Fixed speling error in Description: field.
  * [Roland] Added dependencies on packages providing the vi editor.
  * [Roland] www/include/Layout.class (and others): Removed the VA logo in
    the site icon.  The new site icon now consists of a black "SF" written
    over a Debian swirl.
  * [Roland] deb-specific/install-ldap.sh: Test for the existence of
    /etc/ldap/slapd.conf before trying to modify it, and suggest to
    reconfigure slapd if it is not present.
  * [Roland] [From 2.5] Ported the new LDAP schema, that had been