@@ -93,11 +93,11 @@ install: build
 	uudecode -o $(CURDIR)/debian/sourceforge/usr/lib/sourceforge/www/images/sf-for-debian.png deb-specific/sf-for-debian.png.uu
 	uudecode -o $(CURDIR)/debian/sourceforge/usr/lib/sourceforge/www/images/clear.gif deb-specific/clear.gif.uu
 	uudecode -o $(CURDIR)/debian/sourceforge/usr/lib/sourceforge/www/images/debian-sf-icon.png deb-specific/debian-sf-icon.png.uu
-	install -m 644 deb-specific/sf-httpd.conf.template $(CURDIR)/debian/sourceforge/usr/lib/sourceforge/templates/
-	install -m 644 deb-specific/sf-httpd.secrets.template $(CURDIR)/debian/sourceforge/usr/lib/sourceforge/templates/
-	install -m 644 deb-specific/local.inc.template $(CURDIR)/debian/sourceforge/usr/lib/sourceforge/templates/
-	install -m 644 deb-specific/local.pl.template $(CURDIR)/debian/sourceforge/usr/lib/sourceforge/templates/
-	install -m 644 deb-specific/database.inc.template $(CURDIR)/debian/sourceforge/usr/lib/sourceforge/templates/
+	install -m 644 deb-specific/sf-httpd.conf.template $(CURDIR)/debian/sourceforge/etc/sourceforge/templates/
+	install -m 644 deb-specific/sf-httpd.secrets.template $(CURDIR)/debian/sourceforge/etc/sourceforge/templates/
+	install -m 644 deb-specific/local.inc.template $(CURDIR)/debian/sourceforge/etc/sourceforge/templates/
+	install -m 644 deb-specific/local.pl.template $(CURDIR)/debian/sourceforge/etc/sourceforge/templates/
+	install -m 644 deb-specific/database.inc.template $(CURDIR)/debian/sourceforge/etc/sourceforge/templates/
 	install -m 755 deb-specific/install-chroot.sh $(CURDIR)/debian/sourceforge/usr/lib/sourceforge/bin/
 	install -m 755 deb-specific/install-exim.sh $(CURDIR)/debian/sourceforge/usr/lib/sourceforge/bin/
 	install -m 755 deb-specific/install-db.sh $(CURDIR)/debian/sourceforge/usr/lib/sourceforge/bin/
